interface oluşturma
