# src/controller/stock.controller.ts
@@ -1,6 +1,7 @@
 import StockInOutCard from "../model/Stock/stockInOut.model";
 import GeneralStock from "../model/Stock/generalStock.model";
-import { Controller, Get, Route, Tags } from "tsoa";
+import { Body, Controller, Get, Post, Route, Tags } from "tsoa";
+import { IGeneralStock, addGeneralStockParams } from "../model/Stock/generalStock.interface";
 
 @Route("stock")
 @Tags("Stock")
@@ -15,15 +16,11 @@ export class StockController extends Controller {
         return StockInOutCard.find()
     }
 
+    @Post()
+    public async addGeneralStock(@Body() body: addGeneralStockParams): Promise<addGeneralStockParams> {
+        const u = new GeneralStock(body)
+        await u.save()
+        return u as addGeneralStockParams
+    }
+
 }
-// @Route("stock-in-out")
-// @Tags("Stock-in-out")
-// export class StockInOutController extends Controller {
-
-
-
-//     @Get("get-all-stockInOut")
-//     public async getAllStockInOut() {
-//         return StockInOutCard.find()
-//     }
-// }
