# swagger/swagger.json
@@ -180,7 +180,7 @@
 						"type": "boolean"
 					},
 					"status": {
-						"type": "boolean"
+						"type": "string"
 					},
 					"marks": {
 						"type": "string"
@@ -257,7 +257,6 @@
 					}
 				},
 				"required": [
-					"_id",
 					"companyProfileID",
 					"stockName",
 					"stockNameEN",
@@ -379,6 +378,142 @@
 					"barcode",
 					"leadTime",
 					"billingPDFLink"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"addGeneralStockParams": {
+				"properties": {
+					"companyProfileID": {
+						"$ref": "#/components/schemas/OId"
+					},
+					"stockName": {
+						"type": "string"
+					},
+					"stockNameEN": {
+						"type": "string"
+					},
+					"stockCode": {
+						"type": "string"
+					},
+					"stockType": {
+						"type": "string"
+					},
+					"recordDate": {
+						"type": "string"
+					},
+					"isMainStock": {
+						"type": "boolean"
+					},
+					"status": {
+						"type": "string"
+					},
+					"marks": {
+						"type": "string"
+					},
+					"model": {
+						"type": "string"
+					},
+					"generalBarcode": {
+						"type": "string"
+					},
+					"stockUnit": {
+						"type": "string"
+					},
+					"stockCount": {
+						"type": "number",
+						"format": "double"
+					},
+					"shelfNo": {
+						"type": "string"
+					},
+					"shelfFloorNo": {
+						"type": "string"
+					},
+					"specialCode": {
+						"type": "string"
+					},
+					"category": {
+						"type": "string"
+					},
+					"subCategory": {
+						"type": "string"
+					},
+					"subSubCategory": {
+						"type": "string"
+					},
+					"descriptions": {
+						"type": "string"
+					},
+					"producerCode": {
+						"type": "string"
+					},
+					"sutCode": {
+						"type": "string"
+					},
+					"producerName": {
+						"type": "string"
+					},
+					"producerAddress": {
+						"type": "string"
+					},
+					"leadTime": {
+						"type": "string"
+					},
+					"weightKg": {
+						"type": "number",
+						"format": "double"
+					},
+					"weight": {
+						"type": "string"
+					},
+					"costPrice": {
+						"type": "number",
+						"format": "double"
+					},
+					"outsourcingPrice": {
+						"type": "number",
+						"format": "double"
+					},
+					"outsourcing": {
+						"type": "boolean"
+					},
+					"utsRecord": {
+						"type": "boolean"
+					}
+				},
+				"required": [
+					"companyProfileID",
+					"stockName",
+					"stockNameEN",
+					"stockCode",
+					"stockType",
+					"recordDate",
+					"isMainStock",
+					"status",
+					"marks",
+					"model",
+					"generalBarcode",
+					"stockUnit",
+					"stockCount",
+					"shelfNo",
+					"shelfFloorNo",
+					"specialCode",
+					"category",
+					"subCategory",
+					"subSubCategory",
+					"descriptions",
+					"producerCode",
+					"sutCode",
+					"producerName",
+					"producerAddress",
+					"leadTime",
+					"weightKg",
+					"weight",
+					"costPrice",
+					"outsourcingPrice",
+					"outsourcing",
+					"utsRecord"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -708,6 +843,38 @@
 				],
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/stock": {
+			"post": {
+				"operationId": "AddGeneralStock",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/addGeneralStockParams"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Stock"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/addGeneralStockParams"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/users/get-all": {
